--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Portofolio Project</title>
+	<style>
+        body{
+            background-image: url("./assets/images/background.jpg");
+            background-size: cover;
+        }
+    </style>
 </head>
 <body>
 	<hr/>
-	<h1>Welcome to my portofolio</h1>
+	<h1><center>Welcome to my portofolio</center></h1>
 	<h2>I'am Rahmawati Dwi Lestari</h2>
 	<hr/>
 
@@ -18,6 +24,6 @@
 	<img src="./assets/images/birthday invitation.png" alt="Birthday" width="250" height="300">
 	<hr/>
 
-	<a href="./public/about.html">About Me</a> <a href="./public/birthday invitation.html">Contact Me</a>
+	<a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact Me</a>
 </body>
 </html>
